added html and link to intergrations slides

--- a/slides/integrate.html
+++ b/slides/integrate.html
@@ -19,9 +19,12 @@
 #fRight {float: right; max-width: 50%;}
 #smallLink {font-size: 18px;}
 .whitebg {background-color: #fff; margin-top: 30% !important; padding: 15px !important; border-radius: 15px;}
+.reveal section img {border: none;}
 </style>
 
 ## Integrating ArchivesSpace and ArcLight
+
+[gregwiedeman.com/slides/integrate.html](https://gregwiedeman.com/slides/aspaceIntergrations.html)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
@@ -30,22 +33,16 @@ University at Albany, SUNY
 ### Integrating ASpace and ArcLight
 
 * Why we're using ASpace and ArcLight
-	* Usability experimentation
-	* Intergrations principles
-	* 
 * What does it look like?
-	* 
 * How the connections work
-	* Technical details
 * The bigger picture
-	* What does archival discovery look like?
 </script></section><section  data-markdown><script type="text/template">
-## Why we're using ASpace and ArcLight
+### Why use ASpace and ArcLight
 
 <div id="fLeft">
 <ul>
-<li>Archives usability is bad</li>
-<li>Single point of discovery</li>
+<li>Archives usability is poor</li>
+<li>Multiple points of discovery</li>
 <li>Need experimentation, iteration</li>
 </ul>
 </div>
@@ -55,6 +52,21 @@ University at Albany, SUNY
 </video>
 </div>
 </script></section><section  data-markdown><script type="text/template">
+### Things to try!
+
+* Use archival description for discovery of online content
+	* Digitized material
+	* Born-digital
+	* Without item-level description
+* A single point of discovery
+</script></section><section  data-markdown><script type="text/template">
+### Why not ASpace PUI?
+
+* Complex for development
+* Includes both Archivist and User functionality
+* Customizations often affect other functions
+* ASpace is great for data intergration, but challenging to intergrate user experience with other systems
+</script></section><section  data-markdown><script type="text/template">
 ### Integrations Principles
 
 * Boilerplate implementations
@@ -62,49 +74,84 @@ University at Albany, SUNY
 	* Do one thing
 * Networks of open systems
 </script></section><section  data-markdown><script type="text/template">
-### Why not ASpace PUI?
-
-* Complexity for development
-* Includes both Archivist and User functionality
-* Customizations often affect other functions
-* Harder to intergrate user experience with other systems
-</script></section><section  data-markdown><script type="text/template">
 ### Why ArcLight
 
-* Public-data only
-* Only presents Solr data
-* Open API useful
+* Does one thing
+	* Only presents Solr data
+	* Public-data only
+* Built for archival principles
 * Familiar technology
+* Open API is useful
 </script></section><section  data-markdown><script type="text/template">
-## What does this look like?
+### How do the connections work?
+
+<img src="https://raw.githubusercontent.com/UAlbanyArchives/ArchivesSpace-ArcLight-Workflow/master/img/overnightScripts.png" />
+</script></section><section  data-markdown><script type="text/template">
+### How do the connections work?
+
+* [ASpace-ArcLight workflow](https://github.com/UAlbanyArchives/ArchivesSpace-ArcLight-Workflow)
+	* Overnight or manual EAD export
+	* Uses ArchivesSnake!
+	* Index shell script
+	* [Documentation](https://wiki.albany.edu/display/SCA/Overnight+Export+and+Indexing+Scripts)
+* [Collections Github repo](https://github.com/UAlbanyArchives/collections)
+</script></section><section  data-markdown><script type="text/template">
+### What does this look like?
 
 * [Resource in ASpace](https://aspace.library.albany.edu/resources/390)
 * [Collection in ArcLight](https://archives.albany.edu/description/catalog/ua200)
-* Digital Object in Hyrax
-</script></section><section  data-markdown><script type="text/template">
-## How do the connections work?
+	* Individual levels
+	* Blacklight features like facets
+* [Single point of discovery](https://archives.albany.edu/)
+* [DAO in ASpace](https://aspace.library.albany.edu/digital_objects/20032)
+* [Digital Object in Hyrax](https://archives.albany.edu/concern/daos/6d56zx17z)
+* Two-way client-side integration
+ </script></section><section  data-markdown><script type="text/template">
+### Digital Object Upload
 
-* Overnight or manual EAD export
-* Index shell script
-* Hyrax upload?
-</script></section><section  data-markdown><script type="text/template">
-## Next steps
 
-* Moar ArchivesSnake
-* Indexing from OAI feed?
+* Upload a [Commencement Program](https://archives.albany.edu/description/catalog/ua935)
+* [Documentation](https://wiki.albany.edu/display/SCA/Uploading+Digital+Objects+to+Hyrax)
+</script></section><section  data-markdown><script type="text/template">
+### Limitations
+
+* Takes some customization
+* Hyrax, and all repositories are challenging
+* Usability Issues
+</script></section><section  data-markdown><script type="text/template">
+### Usability Issues
+
+<video width="100%" height="100%" autoplay controls>
+  <source src="scroll.webm" type="video/webm">
+</video></script></section><section  data-markdown><script type="text/template">
+### Usability Issues
+
+* [Tabs! Context! Loops!](https://archives.albany.edu/description/catalog/ua500)
+* [Collections/Digital Selections](https://archives.albany.edu/search/)
+* [UAlbany ArcLight Update and Outlook](https://gregwiedeman.com/2018/11/19/arclight-update.html)
+* [UAlbany ArcLight Usability Analysis](https://docs.google.com/document/d/1etPr-b1B13nwuDa0eXgKrYXFAzZ5vvYJ_NS7VmbrBxI/edit)
+* Addressed during [ArcLight Phase II work cycle](https://library.stanford.edu/blogs/digital-library-blog/2017/06/arclight-mvp-work-cycle-completed)
 </script></section><section  data-markdown><script type="text/template">
 ### The Bigger Picture
 
 * We need a discovery system for digital objects based on archival principles
 	* Description for discovery
 	* Object for discovery, description for context
-* Might not be a single system
+	* Single experience, multiple systems
+
+<img src="img/integrateContext.png" />
 </script></section><section  data-markdown><script type="text/template">
-## Integrating ArchivesSpace and ArcLight
+###  [Integrating ArchivesSpace and ArcLight](gregwiedeman.com/slides/aspaceIntergrations.html)
+
+* [Single Point of Discovery](https://archives.albany.edu)
+* [ArcLight](https://archives.albany.edu/description/)
+* [Hyrax](https://archives.albany.edu/catalog)
+* [Documentation Site](https://wiki.albany.edu/pages/viewpage.action?pageId=80544001)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
-University at Albany, SUNY</script></section></div>
+University at Albany, SUNY
+</script></section></div>
     </div>
 
     <script src="./js/reveal.js"></script>
