--- a/slides/integrate.html
+++ b/slides/integrate.html
@@ -6,7 +6,7 @@
 
     <title>Integrating ArchivesSpace and ArcLight</title>
     <link rel="stylesheet" href="./css/reveal.css" />
-    <link rel="stylesheet" href="./css/theme/serif.css" id="theme" />
+    <link rel="stylesheet" href="./css/theme/moon.css" id="theme" />
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
     <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print" />
 
@@ -20,11 +20,21 @@
 #smallLink {font-size: 18px;}
 .whitebg {background-color: #fff; margin-top: 30% !important; padding: 15px !important; border-radius: 15px;}
 .reveal section img {border: none;}
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+	font-family: "Montserrat", Roboto , sans-serif;
+	text-transform: initial;
+	font-weight: bold;
+}
 </style>
 
 ## Integrating ArchivesSpace and ArcLight
 
-[gregwiedeman.com/slides/integrate.html](https://gregwiedeman.com/slides/aspaceIntergrations.html)
+[gregwiedeman.com/slides/integrate.html](https://gregwiedeman.com/slides/integrate.html)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
