--- a/slides/integrate.html
+++ b/slides/integrate.html
@@ -95,7 +95,7 @@ University at Albany, SUNY
 </script></section><section  data-markdown><script type="text/template">
 ### How do the connections work?
 
-<img src="https://raw.githubusercontent.com/UAlbanyArchives/ArchivesSpace-ArcLight-Workflow/master/img/overnightScripts.png" />
+<img src="https://raw.githubusercontent.com/UAlbanyArchives/ArchivesSpace-ArcLight-Workflow/master/img/overnightScripts.png" alt="Diagram showing how ArchivesSpace connects to ArcLight and Hyrax." />
 </script></section><section  data-markdown><script type="text/template">
 ### How do the connections work?
 
@@ -149,7 +149,7 @@ University at Albany, SUNY
 	* Object for discovery, description for context
 	* Single experience, multiple systems
 
-<img src="img/integrateContext.png" />
+<img src="img/integrateContext.png" alt="Example from ArcLight demo of digital object in context"/>
 </script></section><section  data-markdown><script type="text/template">
 ###  [Integrating ArchivesSpace and ArcLight](gregwiedeman.com/slides/aspaceIntergrations.html)
 
