--- a/slides/integrate.html
+++ b/slides/integrate.html
@@ -97,6 +97,7 @@ University at Albany, SUNY
 						<li>Digital object</li>
 						<ul>
 							<li>Automated metadata</li>
+							<li>OCR</li>
 							<li>Timestamps</li>
 							<li>Extracted entities</li>
 						</ul>
