minor slide changes

--- a/slides/milliSessions2021.html
+++ b/slides/milliSessions2021.html
@@ -83,7 +83,7 @@ University at Albany, SUNY
 * Hierarchical, flexible metadata
 * Large volumes
 </script></section><section  data-markdown><script type="text/template">
-### Bibliographic-style metadata
+### Bibliographic-style systems
 
 * Digital Asset Management Systems (DAMS)
 * Institutional Repositories (IR)
@@ -107,7 +107,8 @@ University at Albany, SUNY
 * Browse and search description
 * Display full archival hierarchy
 * Describes aggregates
-* May link to content
+* May link to digital content
+* Connect analog and digtial materials
 * [Temple University example](https://library.temple.edu/finding_aids)
 </script></section><section  data-markdown><script type="text/template">
 ### Systems for Archival Description
