--- a/slides/mailbagitDLF2022.html
+++ b/slides/mailbagitDLF2022.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>mailbagit Virtual Testing Day</title>
+    <title>Hands-On Email Preservation with Mailbag</title>
     <link rel="stylesheet" href="./css/reveal.css" />
     <link rel="stylesheet" href="./css/theme/black.css" id="theme" />
     <link rel="stylesheet" href="./css/highlight/zenburn.css" />
@@ -26,9 +26,9 @@
 .reveal h4,
 .reveal h5,
 .reveal h6 {
-	font-family: "Montserrat", Roboto , sans-serif;
-	text-transform: initial;
-	font-weight: bold;
+  font-family: "Montserrat", Roboto , sans-serif;
+  text-transform: initial;
+  font-weight: bold;
 }
 .wrap {
 position:relative;
@@ -46,47 +46,70 @@ position:relative;
 .slide-background-content{background-size:contain!important;}
 </style>
 
-## Mailbagit Virtual Testing Day
+## Hands-On Email Preservation with Mailbag
 
-[gregwiedeman.com/slides/mailbagitTestingDay.html](https://gregwiedeman.com/slides/mailbagitTestingDay.html)
+[gregwiedeman.com/slides/mailbagitDLF2022.html](https://gregwiedeman.com/slides/mailbagitDLF2022.html)
+[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit)
 
 Gregory Wiedeman<br/>
-Mark Wolfe<br/>
+University Archivist<br/>
 University at Albany, SUNY
 </script></section><section  data-markdown><script type="text/template">
-## Goals
+## The Problem
 
-* Structured testing time
-	* Finding bugs
-	* Testing on more varied datasets
-* Help/debugging of install issues
-* User testing
-	* Learn a bit about use cases/goals
-	* User feedback/questions 
-* Community building
+> "As a very busy archivist, I would like to store this email I have, so that when I return to it later, all the data will be preserved in a structured way."
 </script></section><section  data-markdown><script type="text/template">
-## Introductions
+### Email formats are problematic
 
-Tell us who you are and describe your work or interest in Mailbag.
+* MBOX, EML, PST, MSG
+  * Preserve email sufficently as structured data
+  * Missing data/rapidly decay
+* PDFs 
+  * Preserves email well as a visual document
+  * Bad for computational use
+* WARC files
+  * Preserves visual document experience well
+  * Maintains data structure
+  * Hard to use/low support for email
 </script></section><section  data-markdown><script type="text/template">
-## Setup Mailbagit
+## What is Mailbag?
 
-* [Python install](https://www.python.org/downloads/)
-* Windows executables
-* Docker
+* [Mailbag specification](https://archives.albany.edu/mailbag/spec/)
+  * extension of Bagit spec
+* [Mailbagit tool](https://github.com/UAlbanyArchives/mailbagit)
+  * Python utility
+  * Very basic GUI
+  * Accessible "guided" path
+</script></section><section  data-markdown><script type="text/template">
+## Mailbagit setup
+
+* Python install with pip
+* Using Windows executables
+* [Docker images](https://archives.albany.edu/mailbag/docker/)
+* Notebook in Google Colab
 </script></section><section  data-markdown><script type="text/template">
 ## Where are we at?
 
-* How many are comfortable with the command line?
-* What OS are you using?
-* Do you have a v3.7+ python install?
-	* Or are using Windows with permissions?
-	* Or have Docker?
+* Not comfortable with the command line?
+  * Use Google Colab notebook
+  * Windows with admin rights?
+    * Can try Windows executables
+* CLI: What OS are you using?
+  * Need a v3.7+ python install
+  * Or can try Windows executables
+* Need wkhtmltopdf or Chrome for PDFs
+</script></section><section  data-markdown><script type="text/template">
+## CLI Mailbagit setup
+
+* [Python install](https://www.python.org/downloads/)
+* [Windows executables](https://github.com/UAlbanyArchives/mailbagit/releases/tag/v0.4.1)
+
+![Screenshot showing to click the checkbox to add Python to PATH.](img/pythonpath.png)
 </script></section><section  data-markdown><script type="text/template">
 ## Python & pip install
 
-* [Python installed](https://www.python.org/downloads/)
-	* v3.7+
+* [Python v3.7+ installed](https://www.python.org/downloads/)
+  * `python -V` or `python3 -V`
 * Do I have pip?
 
 `pip -V` or `pip3 -V`
@@ -94,21 +117,7 @@ Tell us who you are and describe your work or interest in Mailbag.
 * If you need pip:
 
 `python -m ensurepip --upgrade`
-</script></section><section  data-markdown><script type="text/template">
-## Setting up a virtualenv
 
-```
-pip install pipenv
-pipenv shell
-```
-
-You may need:
-
-```
-pip3 install pipenv
-python -m pip install pipenv
-python3 -m pip install pipenv
-```
 </script></section><section  data-markdown><script type="text/template">
 ## Installing `mailbagit`
 
@@ -123,118 +132,83 @@ python3 -m pip install pipenv
 ## Working with PSTs on Windows
 
 * Visual Studio Installer
-	* Community edition works
+  * Community edition works
 * Need "Desktop development with C++"
 * And "VS 2019 C++ x64/x86 build tools"
+* [Docs for this](https://archives.albany.edu/mailbag/python/#working-with-pst-files)
 </script></section><section  data-markdown><script type="text/template">
 ## `mailbagit` command
 
-`mailbagit -h`
-</script></section><section  data-markdown><script type="text/template">
-## Installing the GUI
-
-`pip install mailbagit[gui]`
-
-* This may break on Linux distros
-* Install a [specific wxPython first](https://archives.albany.edu/mailbag/python/#mailbagit-gui-on-ubuntu)
-</script></section><section  data-markdown><script type="text/template">
-## Running the GUI
-
-`mailbagit-gui`
-
-* `mailbagit-gui.py`
-
-```
-from mailbagit import gui
-gui()
-```
-
-* `python mailbagit-gui.py`
+`mailbagit -v`
 </script></section><section  data-markdown><script type="text/template">
 ## Running Windows Executables
 
-* Download them from the [v0.2.1 release on Github](https://github.com/UAlbanyArchives/mailbagit/releases/tag/v0.2.1)
+* Download them from the [v0.4.1 release on Github](https://github.com/UAlbanyArchives/mailbagit/releases/tag/v0.4.1)
 * [Unblock executables from Defender SmartScreen](https://archives.albany.edu/mailbag/exe/#unblocking-mailbagitexe-and-mailbagit-guiexe)
 </script></section><section  data-markdown><script type="text/template">
-## PDF dependancies
+## Google Colab Mailbagit setup
 
-* [wkhtmltopdf](https://wkhtmltopdf.org/downloads.html) and [chrome](https://www.google.com/chrome/) --headless
-* in PATH:
-	* wkhtmltopdf
-	* wkhtmltopdf.exe
-	* google-chrome
-	* chrome
-	* chrome.exe
+* Go to [colab.research.google.com](https://colab.research.google.com/)
+* Load from Github
+* Enter the Github URL: https://github.com/UAlbanyArchives/mailbagit-workshop
+* Select the "mailbagit_workshop.ipynb" notebook
 </script></section><section  data-markdown><script type="text/template">
-## Running on Docker
+## Google Colab Mailbagit setup
 
-```
-docker pull ualbanyarchives/mailbagit
-docker run -it ualbanyarchives/mailbagit:latest
-```
+![Screenshot showing how to load the workshop notebook in Google Colab.](img/mailbag-colab-notebook.png)
+</script></section><section  data-markdown><script type="text/template">
+## Sample Data
+
+* [https://archives.albany.edu/static/mailbagWorkshopData.zip](https://archives.albany.edu/static/mailbagWorkshopData.zip)
+* extract to working directory
+  * Inbox (a folder of .EMLs)
+  * msgs (a folder of .MSGs)
+  * account.mbox
+  * enron.pst
 </script></section><section  data-markdown><script type="text/template">
 ## What mailbagit does
 
 * Takes email export files
-	* PST, MBOX, MSG, EML
-	* Single files or directory of files
-	* "companion" files option
+  * PST, MBOX, MSG, EML
+  * Single files or directory of files
+  * "companion" files option
 * Packages them into a mailbag
 * Creates derivative files
-	* TXT, HTML, EML, MBOX
-	* PDF, PDF-chrome, WARC
+  * TXT, HTML, EML, MBOX
+  * PDF, PDF-chrome, WARC
 </script></section><section  data-markdown><script type="text/template">
-## Options
+### Speed
+
+* Things that are fast
+  * MBOX, EML sources
+  * TXT, HTML, EML, MBOX derivatives
+* Things that are slow
+  * PST, MSG sources
+  * PDF, WARC derivatives
+</script></section><section  data-markdown><script type="text/template">
+## CLI Options
 
 * -r --dry-run
 * --css path/to/styles.css
 * -c --compress zip
 * -f --companion_files
 </script></section><section  data-markdown><script type="text/template">
-## Additional options
+## CLI Options
 
 * --capture-date
 * --capture-agent
 * --capture-agent-version
 * Most bagit-python options
-	* --processes
-	* Checksums, --md5, --sha512
-	* --source-organization
-	* not -log, -quiet, -validate, -fast
-</script></section><section  data-markdown><script type="text/template">
-# Email data
-
-[https://archives.albany.edu/patron/vtd-sample-data.zip](https://archives.albany.edu/patron/vtd-sample-data.zip) (202MB)
-
-[https://archives.albany.edu/patron/vtd-sample-data-small.zip](https://archives.albany.edu/patron/vtd-sample-data-small.zip) (28MB)
-</script></section><section  data-markdown><script type="text/template">
-# Email data
-
-* Inbox (directory of 331 .eml)
-* msg (directory of 20 .msg)
-* account.mbox (large)
-* allfacstaff.pst (large)
-* enron.pst (small)
-</script></section><section  data-markdown><script type="text/template">
-### Speed
-
-* Things that are fast
-	* MBOX, EML sources
-	* TXT, HTML, EML, MBOX derivatives
-* Things that are slow
-	* PST, MSG sources
-	* PDF, WARC derivatives
+  * --processes
+  * Checksums, --md5, --sha512
+  * --source-organization
+  * not -quiet, -validate, -fast
 </script></section><section  data-markdown><script type="text/template">
 ## Privacy & Security concerns
 
 * Email trackers
 * PDF and WARC derivatives ping all URLs
 * File inclusions
-</script></section><section  data-markdown><script type="text/template">
-## Jupyter Notebooks
-
-
-
 </script></section><section  data-markdown><script type="text/template">
 ### Try a "dry run":
 ```
@@ -243,42 +217,7 @@ mailbagit account.mbox -i mbox -d html eml -m test1 -r
 ### Try it for real:
 ```
 mailbagit account.mbox -i mbox -d html eml -m test1
-```
-</script></section><section  data-markdown><script type="text/template">
-## Logging
-
-Windows Powershell:
-```
-$env:MAILBAGIT_LOG_LEVEL="info"
-```
-
-Posix:
-```
-export MAILBAGIT_LOG_LEVEL=debug
-```
-</script></section><section  data-markdown><script type="text/template">
-### Try some MSG files
-
-Do a "dry run" first again
-```
-mailbagit msgs -i msg -d eml html txt -m test2 -r
-```
-
-```
-mailbagit msgs -i msg -d eml html txt -m test2
-```
-</script></section><section  data-markdown><script type="text/template">
-## Mailbagit error reports
-
-* external to mailbag
-* created on -r --dry-run
-	* more errors will show without dry-run
-	* errors from subprocesses
-		* wkhtmltopdf
-		* chrome
-* errors.csv
-* .txt file for each message with error and full stack trace
-</script></section><section  data-markdown><script type="text/template">
+```</script></section><section  data-markdown><script type="text/template">
 ## What's in a mailbag?
 
 * bagit.txt, manifiests
@@ -333,118 +272,127 @@ Content-Type
 ## data (payload)
 
 * attachments
-	* [Mailbag-Message-ID]
-		* attachments.csv
-		* test.pdf
-* pst
-	* export.pst
+  * [Mailbag-Message-ID]
+    * attachments.csv
+    * test.pdf
+* mbox
+  * account.mbox
 * eml
-	* 
-* pdf
-		
+* html
+</script></section><section  data-markdown><script type="text/template">
+### Try some MSG files
+
+Do a "dry run" first again
+```
+mailbagit msgs -i msg -d eml html txt -m test2 -r
+```
+
+```
+mailbagit msgs -i msg -d eml html txt -m test2
+```
+</script></section><section  data-markdown><script type="text/template">
+## Mailbagit error reports
+
+* external to mailbag
+* created on -r --dry-run
+  * more errors will show without dry-run
+  * errors from subprocesses
+    * wkhtmltopdf
+    * chrome
+* errors.csv
+* .txt file for each message with error and full stack trace
+    </script></section><section  data-markdown><script type="text/template">
+## PDFs require external dependencies
+
+* [wkhtmltopdf](https://wkhtmltopdf.org/)
+  * `pdf`
+* Google Chrome (`chrome`, `chrome.exe`, or `google-chrome`)
+  * `pdf-chrome`
+* [More setup details](https://archives.albany.edu/mailbag/pdf/)
 </script></section><section  data-markdown><script type="text/template">
 ### Lets make some PDFs
 
-Dry run:
-```
-mailbagit msgs/ -i msg -d eml pdf -m test3 -r
-```
-
+With wkhtmltopdf:
 ```
 mailbagit msgs/ -i msg -d eml pdf -m test3
 ```
-</script></section><section  data-markdown><script type="text/template">
-### Lets do the same, but with Chrome
-
+With Chrome:
 ```
-mailbagit msgs/ -i msg -d eml pdf-chrome -m test4
+mailbagit msgs/ -i msg -d eml pdf-chrome -m test3
 ```
 </script></section><section  data-markdown><script type="text/template">
 ### Try a PST
 
 ```
-mailbagit enron.pst -i pst -d eml pdf html mbox -m test5
+mailbagit enron.pst -i pst -d eml html mbox -m test4
 ```
 </script></section><section  data-markdown><script type="text/template">
-### Lets include some WARCs
+### Lets make some WARCs!
 
 ```
-mailbagit Inbox/ -i eml -d html warc -m test6
+mailbagit Inbox/ -i eml -d html warc -m test5
 ```
+
+Check out a WARC with [replayweb.page](https://replayweb.page/)!
 </script></section><section  data-markdown><script type="text/template">
-## How mailbagit handles encoding
+### WARCs from mailbagit
+
+* uses [warcio](https://github.com/webrecorder/warcio) and `requests`
+* For WARC-Target-URI uses "mailbag", Mailbag-Message-ID
+  * "http://mailbag/11/body.html"
+* body.html response record
+* headers.json response record
+* duplicated in metadata record not used by replayweb.page
+* includes attachments
+</script></section><section  data-markdown><script type="text/template">
+## How mailbagit makes WARCs
 
 * Bodies and headers
 * Tries listed encoding if present (and valid)
 * Tries chardetect
-	* raises warning if successful
-	* raises error if failed
+  * raises warning if successful
+  * raises error if failed
 * replaces errors with listed encoding
 * Writes derivatives as "UTF-8"
-	* except EML/MBOX
+  * except EML/MBOX
 </script></section><section  data-markdown><script type="text/template">
 ## Lossiness in derivatives
 
 * Most derivatives only contain part of the data
 * EML and MBOX derivatives
-	* tries to write complete object
-	* uses original encoding
-	* only possible for EML/MBOX sources
-	* sometimes fails due to encoding issues
-		* raises warning and generates from Model
-		</script></section><section  data-markdown><script type="text/template">
+  * tries to write complete object
+  * uses original encoding
+  * only possible for EML/MBOX sources
+  * sometimes fails due to encoding issues
+    * raises warning and generates from Model
+    </script></section><section  data-markdown><script type="text/template">
 ## EML / MBOX from Model
 
 * [mailbagit Model](https://github.com/UAlbanyArchives/mailbagit/blob/main/mailbagit/models.py)
 * Contains all headers, HTML and TXT bodies, attachments
 * Writes folder structure to X-Folder header
 * multipart/mixed
-	* multipart/alternative (text/plain if present)
-	* multipart/alternative (text/html if present)
-	* application/pdf (application/octet-stream if missing)
-	</script></section><section  data-markdown><script type="text/template">
-## WARC derivatives
-
-* Now only includes HTML
-* WARC data and structure TBD
-	* Will include headers
-	* should include attachments
-	* might include option for links
-</script></section><section  data-markdown><script type="text/template">
-## Undecided issues 
-
-* [empty PST folders](https://github.com/UAlbanyArchives/mailbagit/issues/117)
-* Warnings for incorrect encoding listed, but successful decode?
-* Distribution challenges
-	* GUI and exe barriers
-* WARCs
-</script></section><section  data-markdown><script type="text/template">
+  * multipart/alternative (text/plain if present)
+  * multipart/alternative (text/html if present)
+  * application/pdf (application/octet-stream if missing)
+  </script></section><section  data-markdown><script type="text/template">
 ## Future Questions
 
 * Packaging from IMAP
 * Packaging over APIs
-	* Gmail
-	* Office365/Exchange
-	* would require OAuth
-* Exclusions/filtering	
-* Would you like to see more data-centric output?
-
+  * Gmail
+  * Office365/Exchange
+  * would require OAuth
+* Exclusions/filtering  
 </script></section><section  data-markdown><script type="text/template">
-### Retrospective if time
+## Hands-On Email Preservation with Mailbag
 
-[Jamboard](https://jamboard.google.com/d/1Fc64zlP4rouDzNTt8WvgXdLfc0mBPdCNvHcihyCq0bQ/viewer)
-</script></section><section  data-markdown><script type="text/template">
-### Bonus: A big PST
+[gregwiedeman.com/slides/mailbagitDLF2022.html](https://gregwiedeman.com/slides/mailbagitDLF2022.html)
+[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit)
 
-Try a dry run first:
-```
-mailbagit allfacstaff.pst -i pst -d eml mbox html pdf -m test7 -r
-```
-
-```
-mailbagit allfacstaff.pst -i pst -d eml mbox html pdf -m test7
-```
-</script></section></div>
+Gregory Wiedeman<br/>
+University Archivist<br/>
+University at Albany, SUNY</script></section></div>
     </div>
 
     <script src="./js/reveal.js"></script>
