fixed url slide

--- a/slides/mailbagitHandsOn.html
+++ b/slides/mailbagitHandsOn.html
@@ -50,7 +50,8 @@ position:relative;
 
 ## Hands-On Email Preservation with Mailbag
 
-[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit)
+[gregwiedeman.com/slides/mailbagitHandsOn.html](hhttps://gregwiedeman.com/slides/mailbagitHandsOn.html)
+[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit-workshop)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
@@ -414,7 +415,8 @@ Check out a WARC with [replayweb.page](https://replayweb.page/)!
 </script></section><section  data-markdown><script type="text/template">
 ## Hands-On Email Preservation with Mailbag
 
-[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit)
+[gregwiedeman.com/slides/mailbagitHandsOn.html](hhttps://gregwiedeman.com/slides/mailbagitHandsOn.html)
+[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit-workshop)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
