updated slides for symposium workshop

--- a/slides/mailbagitHandsOn.html
+++ b/slides/mailbagitHandsOn.html
@@ -50,7 +50,7 @@ position:relative;
 
 ## Hands-On Email Preservation with Mailbag
 
-[gregwiedeman.com/slides/mailbagitHandsOn.html](hhttps://gregwiedeman.com/slides/mailbagitHandsOn.html)
+[gregwiedeman.com/slides/mailbagitHandsOn.html](https://gregwiedeman.com/slides/mailbagitHandsOn.html)
 [tinyurl.com/mailbagit](https://tinyurl.com/mailbagit-workshop)
 
 Gregory Wiedeman<br/>
@@ -64,7 +64,7 @@ University at Albany, SUNY
 ### Email formats are problematic
 
 * MBOX, EML, PST, MSG
-  * Preserve email sufficently as structured data
+  * Preserve email as structured data
   * Missing data/rapidly decay
 * PDFs 
   * Preserves email well as a visual document
@@ -110,7 +110,7 @@ University at Albany, SUNY
 </script></section><section  data-markdown><script type="text/template">
 ## mailbagit docker setup
 
-Docker pull may take awhile (634 MB)
+Docker pull may take awhile (552 MB)
 
 ```
 docker pull ualbanyarchives/mailbagit
@@ -192,7 +192,7 @@ Check that mailbagit is installed:
   * msgs (a folder of .MSGs)
   * account.mbox
   * enron.pst
-* Colab users run "Get some sample data" and "Working directory setup"
+* Colab users run "Get some sample data"
 </script></section><section  data-markdown><script type="text/template">
 ## What mailbagit does
 
@@ -315,9 +315,8 @@ Do a "dry run" first again
 mailbagit msgs -i msg -d eml html txt -m test2 -r
 ```
 
-```
-mailbagit msgs -i msg -d eml html txt -m test2
-```
+* Dry run still creates an error report
+* Take a look a the warnings report in `msgs/test2_warnings`
 </script></section><section  data-markdown><script type="text/template">
 ## Mailbagit error reports
 
@@ -329,15 +328,47 @@ mailbagit msgs -i msg -d eml html txt -m test2
     * chrome
 * errors.csv
 * .txt file for each message with error and full stack trace
-    </script></section><section  data-markdown><script type="text/template">
+</script></section><section  data-markdown><script type="text/template">
+
+### Lets try MSGs for real
+
+
+```
+mailbagit msgs -i msg -d eml html txt -m test2
+```
+</script></section><section  data-markdown><script type="text/template">
 ## PDFs require external dependencies
 
 * [wkhtmltopdf](https://wkhtmltopdf.org/)
   * `pdf`
-* Google Chrome (`chrome`, `chrome.exe`, or `google-chrome`)
+* [Google Chrome](https://www.google.com/chrome/) (`chrome`, `chrome.exe`, or `google-chrome`)
   * `pdf-chrome`
 * [More setup details](https://archives.albany.edu/mailbag/pdf/)
 </script></section><section  data-markdown><script type="text/template">
+## Add to your PATH Windows
+
+Windows likely paths:
+```
+C:\Program Files\wkhtmltopdf\bin
+C:\Program Files\Google\Chrome\Application
+C:\Program Files (x86)\Google\Chrome\Application
+```
+</script></section><section  data-markdown><script type="text/template">
+## Add to your PATH MacOS
+
+MacOS likely `/Applications/Google Chrome.app`
+```
+alias chrome="/Applications/Google\ Chrome.app/Contents/MacOS/Google\ Chrome"
+```
+</script></section><section  data-markdown><script type="text/template">
+## Testing PDF commands
+
+```
+wkhtmltopdf -V
+chrome
+chrome.exe
+google-chrome
+```</script></section><section  data-markdown><script type="text/template">
 ### Lets make some PDFs
 
 With wkhtmltopdf:
@@ -358,12 +389,12 @@ mailbagit enron.pst -i pst -d eml html mbox -m test4
 ### Lets make some WARCs!
 
 ```
-mailbagit Inbox/ -i eml -d html warc -m test5
+mailbagit msgs -i msg -d eml html warc -m test5
 ```
 
 Check out a WARC with [replayweb.page](https://replayweb.page/)!
 </script></section><section  data-markdown><script type="text/template">
-### WARCs from mailbagit
+### How mailbagit makes WARCs
 
 * uses [warcio](https://github.com/webrecorder/warcio) and `requests`
 * For WARC-Target-URI uses "mailbag", Mailbag-Message-ID
@@ -373,7 +404,7 @@ Check out a WARC with [replayweb.page](https://replayweb.page/)!
 * duplicated in metadata record not used by replayweb.page
 * includes attachments
 </script></section><section  data-markdown><script type="text/template">
-## How mailbagit makes WARCs
+## How mailbagit handles encoding
 
 * Bodies and headers
 * Tries listed encoding if present (and valid)
@@ -387,16 +418,16 @@ Check out a WARC with [replayweb.page](https://replayweb.page/)!
 ## Lossiness in derivatives
 
 * Most derivatives only contain part of the data
+* Most derivatives get written to/from [the mailbagit Model](https://github.com/UAlbanyArchives/mailbagit/blob/main/mailbagit/models.py)
 * EML and MBOX derivatives
   * tries to write complete object
-  * uses original encoding
   * only possible for EML/MBOX sources
+  * uses original encoding
   * sometimes fails due to encoding issues
     * raises warning and generates from Model
     </script></section><section  data-markdown><script type="text/template">
 ## EML / MBOX from Model
 
-* [mailbagit Model](https://github.com/UAlbanyArchives/mailbagit/blob/main/mailbagit/models.py)
 * Contains all headers, HTML and TXT bodies, attachments
 * Writes folder structure to X-Folder header
 * multipart/mixed
@@ -411,7 +442,7 @@ Check out a WARC with [replayweb.page](https://replayweb.page/)!
   * Gmail
   * Office365/Exchange
   * would require OAuth
-* Exclusions/filtering  
+* Exclusions/filtering
 </script></section><section  data-markdown><script type="text/template">
 ## Hands-On Email Preservation with Mailbag
 
