fixed old link in slides

--- a/slides/mailbagitHandsOn.html
+++ b/slides/mailbagitHandsOn.html
@@ -51,7 +51,7 @@ position:relative;
 ## Hands-On Email Preservation with Mailbag
 
 [gregwiedeman.com/slides/mailbagitHandsOn.html](https://gregwiedeman.com/slides/mailbagitHandsOn.html)
-[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit-workshop)
+[tinyurl.com/mailbagit-workshop](https://tinyurl.com/mailbagit-workshop)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
@@ -447,7 +447,7 @@ Check out a WARC with [replayweb.page](https://replayweb.page/)!
 ## Hands-On Email Preservation with Mailbag
 
 [gregwiedeman.com/slides/mailbagitHandsOn.html](hhttps://gregwiedeman.com/slides/mailbagitHandsOn.html)
-[tinyurl.com/mailbagit](https://tinyurl.com/mailbagit-workshop)
+[tinyurl.com/mailbagit-workshop](https://tinyurl.com/mailbagit-workshop)
 
 Gregory Wiedeman<br/>
 University Archivist<br/>
